--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -1,4 +1,6 @@
-<h1>Listing patients</h1>
+<div class="page-header">
+  <h1>Listing patients</h1>
+</div>
 
 <table class="table table-striped">
   <thead>
@@ -27,4 +29,4 @@
 
 <br />
 
-<%= link_to 'New Patient', new_patient_path %>
+<%= link_to 'New Patient', new_patient_path, class: 'btn' %>
