Picking up the authorized user through HTTP headers

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
   <div class="navbar-inner">
     <div class="container">
       <a class="brand" href="#">RHEx</a>
+      <p class="pull-right">
+        Logged in as <%= current_user.given_name %> <%= current_user.family_name %>
+      </p>
     </div>
   </div>
 </div>
