Added the ability to remove authorized users

--- a/app/views/authorized_users/create.html.erb
+++ b/app/views/authorized_users/create.html.erb
@@ -1,3 +1,8 @@
 <% @patient.authorized_users.each do |au| -%>
-<li><%= au.email %></li>
+<li>
+    <%= au.email %>
+    <%= link_to(patient_authorized_user_path(@patient, au), confirm: 'Are you sure?', method: :delete) do %>
+    <i class="icon-remove-sign"></i>
+    <% end -%>
+</li>
 <% end -%>
