--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -46,7 +46,12 @@
 <h2>Authorized Users</h2>
 <ul id="authorized-users">
   <% @patient.authorized_users.each do |au| -%>
-  <li><%= au.email %></li>
+  <li>
+    <%= au.email %>
+    <%= link_to(patient_authorized_user_path(@patient, au), confirm: 'Are you sure?', method: :delete) do %>
+    <i class="icon-remove-sign"></i>
+    <% end -%>
+  </li>
   <% end -%>
 </ul>
 
