Fix problem with root going to index.html. The user is now directed to the patient index. The user is now shown a useful error page in dev mode if they are not logged in or a 403 if they are in production mode.

--- a/app/views/application/no_user_exception.erb
+++ b/app/views/application/no_user_exception.erb
@@ -1,11 +1,7 @@
 <html>
     <title>Problems occurred</title>
     <body>
-        <h3>You hit a snag</h3>
-        <p>Some problem has occurred with your access to the website. Some common problems include:</p>
-        <ul>
-          <li>Accessing the website without being authenticated. To solve this problem, please first access the
-appropriate OpenID Connect login first.</li>
-        </ul>
+        <h3>You must be authorized to gain access to the server</h3>
+        <p>Access the relying party and become authorized before accessing the service.</p>
     </body>
 </html>
